--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "localtunnel": "^2.0.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
     "nodemon": "^1.19.4",
