--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localtunnel": "^2.0.0",
     "morgan": "~1.9.1",
     "node-sass-middleware": "0.11.0",
+    "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
     "swig": "^1.4.2"
   }
