--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass-middleware": "0.11.0",
     "nodemailer": "^6.3.1",
     "nodemon": "^1.19.4",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "uglify-js": "2.6.0"
   }
 }
