initial commit dev version

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-PORT=3000
-EMAIL_PASSWORD=arsenalvic
+NODE_ENV=production
+PORT=5530
+EMAIL_RECIP=luiz.sales@servicemonit.com.br
+EMAIL_SENDER=support@zabbix.report
+EMAIL_PASSWORD=L2YbRv5*
