--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "zabbix-reports-homepage",
-  "version": "development",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "build": "node ./bin/www"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "consolidate": "^0.15.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "localtunnel": "^2.0.0",
     "morgan": "~1.9.1",
-    "node-sass-middleware": "0.11.0",
     "nodemailer": "^6.3.1",
-    "nodemon": "^1.19.4",
     "swig": "^1.4.2",
     "uglify-js": "2.6.0"
+  },
+  "devDependencies": {
+    "node-sass-middleware": "^0.11.0",
+    "nodemon": "^2.0.1"
   }
 }
