--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
-EMAIL_RECIP=luiz.sales@servicemonit.com.br
-EMAIL_SENDER=support@zabbix.report
+EMAIL_RECEIVER=luiz.sales@servicemonit.com.br
+EMAIL_SENDER=help.zabbixreports@gmail.com
 EMAIL_PASSWORD=L2YbRv5*
