--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.1"
+  },
+  "engines": {
+    "node": "10.16.3"
   }
 }
