--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "zabbix-reports-homepage",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "consolidate": "^0.15.1",
